...
    <string name="account_403b_growth_rate_label">Annual Growth Rate (%):</string>
    <string name="account_403b_contributions_label">Annual Contributions:</string>
    <string name="account_403b_start_withdrawals_age_label">Starting Withdrawals Age:</string>
    <string name="account_403b_start_number_of_withdrawals_label">Number of Withdrawals:</string>

    <string name="cash_balance_balance_label">Current Balance:</string>
    <string name="cash_balance_growth_rate_label">Annual Growth Rate (%):</string>
    <string name="cash_balance_contributions_label">Annual Contributions:</string>
    <string name="cash_balance_start_withdrawals_age_label">Starting Withdrawals Age:</string>
    <string name="cash_balance_start_number_of_withdrawals_label">Number of Withdrawals:</string>

    <string name="traditional_ira_balance_label">Current Balance:</string>
    <string name="traditional_ira_growth_rate_label">Annual Growth Rate (%):</string>
    <string name="traditional_ira_contributions_label">Annual Contributions:</string>
    <string name="traditional_ira_start_withdrawals_age_label">Starting Withdrawals Age:</string>
    <string name="traditional_ira_start_number_of_withdrawals_label">Number of Withdrawals:</string>

    <string name="roth_ira_balance_label">Current Balance:</string>
    <string name="roth_ira_growth_rate_label">Annual Growth Rate (%):</string>
    <string name="roth_ira_contributions_label">Annual Contributions:</string>
    <string name="roth_ira_start_withdrawals_age_label">Starting Withdrawals Age:</string>
    <string name="roth_ira_start_number_of_withdrawals_label">Number of Withdrawals:</string>
    <string name="expenses_annual_expenses_label">Expenses:</string>
    <string name="taxes_federal_tax_rate_label">Federal Tax Rate (%):</string>
    <string name="taxes_state_tax_rate_label">State Tax Rate (%):</string>
    <string name="social_security_starting_age_label">Starting Age:</string>
    <string name="social_security_monthly_amount_label">Monthly Amount:</string>
    <string name="brokerage_header">Brokerage</string>
    <string name="brokerage_balance_label">Balance:</string>
    <string name="brokerage_growth_rate_label">Growth Rate (%):</string>
    <string name="salary_salary_label">Annual Salary:</string>
    <string name="salary_merit_increase_label">Merit Increase (%):</string>
    <string name="deductions_deductions_label">Annual Deductions:</string>
    <string name="pension_starting_age_label">Starting Age:</string>
    <string name="pension_monthly_amount_label">Monthly Amount:</string>
    <string name="pension_inflation_adjusted_label">Inflation Adjusted</string>
    <string name="personal_simulation_date_label">Simulation Date:</string>
    <string name="personal_birth_date_label">Birth Date:</string>
    <string name="personal_retirement_age_label">Retirement Age:</string>
    <string name="personal_life_expectancy_age_label">Life Expectancy Age:</string>
    <string name="personal_inflation_label">Inflation (%):</string>

    <string name="simulation_date_title">Simulation Date</string>
    <string name="birth_date_title">Birth Date</string>

    <!-- Strings related to the action bar -->
    <string name="jump">JUMP</string>
    <string name="actions">ACTIONS</string>
    <string name="save_inputs">Save</string>
    <string name="outputs">Go to Outputs</string>
    <string name="inputs">Go to Inputs</string>
    <string name="help">Go to Help</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="license_cash_flow">License (Cash Flow)</string>
    <string name="license_android_plot">License (AndroidPlot)</string>
    <string name="license_apache_v2">License (Apache v2)</string>

    <!-- Strings related to the inputs Title -->
    <string name="input_header_401k">401K</string>
    <string name="input_header_403b">403B</string>
    <string name="input_header_brokerage">Brokerage</string>
    <string name="input_header_cash_balance">Cash Balance</string>
    <string name="input_header_deductions">Deductions</string>
    <string name="input_header_expenses">Expenses</string>
    <string name="input_header_ira_roth">IRA-Roth</string>
    <string name="input_header_ira_traditional">IRA-Traditional</string>
    <string name="input_header_pension">Pension</string>
    <string name="input_header_personal">Personal</string>
    <string name="input_header_salary">Salary</string>
    <string name="input_header_savings">Savings</string>
    <string name="input_header_social_security">Social Security</string>
    <string name="input_header_taxes">Taxes</string>

    <!-- Strings related to the help inputs Title -->
    <string name="help_input_header_401k">401K</string>
    <string name="help_input_header_403b">403B</string>
    <string name="help_input_header_brokerage">Brokerage</string>
    <string name="help_input_header_cash_balance">Cash Balance</string>
    <string name="help_input_header_deductions">Deductions</string>
    <string name="help_input_header_expenses">Expenses</string>
    <string name="help_input_header_ira_roth">IRA-Roth</string>
...

    // For the database; fields table
    <string name="field_balance">Balance</string>
    <string name="field_contributions">Contributions</string>
    <string name="field_growth_rate">Growth Rate (%)</string>
    <string name="field_number_of_withdrawals">Number Of Withdrawals</string>
    <string name="field_start_withdrawals_age">Start Withdrawals Age</string>
    <string name="field_yearly_deductions">Yearly Deductions</string>
    <string name="field_annual_expenses">Annual Expenses</string>
    <string name="field_starting_age">Starting Age</string>
    <string name="field_monthly_amount">Monthly Amount</string>
    <string name="field_retirement_age">Retirement Age</string>
    <string name="field_life_expectancy_age">Life Expectancy Age</string>
...
