<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="https://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actions"
        android:title="@string/actions"
        app:showAsAction="ifRoom|withText">

        <menu xmlns:android="http://schemas.android.com/apk/res/android">
           <item
                android:id="@+id/save_inputs_id"
                android:title="@string/save_inputs" />
            <item
                android:id="@+id/outputs"
                android:title = "@string/outputs" />
            <item
                android:id="@+id/help"
                android:title = "@string/help" />
            <item
                android:id="@+id/login"
                android:title = "@string/login" />
            <item
                android:id="@+id/about"
                android:title = "@string/about">
                <menu>
                    <item
                        android:id="@+id/license_cash_flow"
                        android:title = "@string/license_cash_flow" />
                    <item
                        android:id="@+id/license_android_plot"
                        android:title = "@string/license_android_plot" />
                    <item
                        android:id="@+id/license_apache_v2"
                        android:title = "@string/license_apache_v2" />
                </menu>
            </item>
        </menu>
    </item>

    <item
        android:id="@+id/jump"
        android:icon="@drawable/ic_menu_icon"
        android:title="@string/jump"
        app:showAsAction="ifRoom|withText">

        <menu xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/input_menu">

            <item
                android:id="@+id/account_401k_menu_item"
                android:title = "@string/input_header_401k" />

            <item
                android:id="@+id/account_403b_menu_item"
                android:title = "@string/input_header_403b" />

            <item
                android:id="@+id/brokerage_menu_item"
                android:title = "@string/input_header_brokerage" />

            <item
                android:id="@+id/account_cash_balance_menu_item"
                android:title = "@string/input_header_cash_balance" />

            <item
                android:id="@+id/deductions_menu_item"
                android:title = "@string/input_header_deductions" />

            <item
                android:id="@+id/expenses_menu_item"
                android:title = "@string/input_header_expenses" />

            <item
                android:id="@+id/account_roth_ira_menu_item"
                android:title = "@string/input_header_ira_roth" />

            <item
                android:id="@+id/account_traditional_ira_menu_item"
                android:title = "@string/input_header_ira_traditional" />

            <item
                android:id="@+id/pension_menu_item"
                android:title = "@string/input_header_pension" />

            <item
                android:id="@+id/personal_menu_item"
                android:title = "@string/input_header_personal" />

            <item
                android:id="@+id/salary_menu_item"
                android:title = "@string/input_header_salary" />

            <item
                android:id="@+id/savings_menu_item"
                android:title = "@string/input_header_savings" />

            <item
                android:id="@+id/social_security_menu_item"
                android:title = "@string/input_header_social_security" />

            <item
                android:id="@+id/taxes_menu_item"
                android:title = "@string/input_header_taxes" />
        </menu>
    </item>
</menu>