<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:text="@string/title_login"
        style="@style/Title"/>

    <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <TextView
                android:id="@+id/email_username_label"
                android:labelFor="@+id/email_username"
                android:text="@string/prompt_email"
                style="@style/InputLabel"/>

        <EditText
            android:id="@id/email_username"
            style="@style/InputEntry"
            android:layout_width="match_parent"
            android:layout_gravity="fill_horizontal|end"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:windowSoftInputMode="stateVisible|adjustResize" />
      </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/password_label"
            android:labelFor="@+id/password"
            android:text="@string/prompt_password"
            style="@style/InputLabel"/>

        <EditText
            android:id="@id/password"
            style="@style/InputEntry"
            android:layout_width="match_parent"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:windowSoftInputMode="stateVisible|adjustResize" />
    </LinearLayout>

    <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity = "center"
           android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            style="@style/Widget.AppCompat.Button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_account_button"
            android:text="@string/new_account"
            style="@style/Widget.AppCompat.Button"/>

    </LinearLayout>

    <TextView
        android:id="@+id/login_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity = "center"
        android:textSize="15sp"
        android:textColor="@color/red" />

</LinearLayout>
</ScrollView>
