...
        <TextView
            android:id="@+id/account_401k_balance_label"
            android:text="@string/account_401k_balance_label"
            style="@style/InputLabel"/>

        <EditText
            android:id="@+id/account_401k_balance"
            android:layout_toRightOf="@id/account_401k_balance_label"
            android:windowSoftInputMode="stateVisible|adjustResize"
            android:inputType="numberDecimal"
            android:digits="0123456789.,$"
            style="@style/InputEntry" />
    </RelativeLayout>
...
        <TextView
            android:id="@+id/account_401k_start_withdrawals_age_label"
            android:text="@string/account_401k_start_withdrawals_age_label"
            style="@style/InputLabel"/>

        <EditText
            android:id="@+id/account_401k_start_withdrawals_age"
            android:layout_toRightOf="@id/account_401k_start_withdrawals_age_label"
            android:windowSoftInputMode="stateVisible|adjustResize"
            android:inputType="number"
            android:maxLength="6"
            style="@style/InputEntry"/>
    </RelativeLayout>
...
